# embedded_sandbox

./: CMakeLists.txt
cmake/: arm-none-eabi.cmake
hardware/: startup_stm32f411xx.s  stm32f411xe_flash.ld
